--- a/_posts/stats/2019-08-08-stats-1.md
+++ b/_posts/stats/2019-08-08-stats-1.md
@@ -22,6 +22,7 @@ Learn again Stats for Machine Learning and Data Science. A preparation step befo
 - Book: **[Think Stats 2](https://greenteapress.com/thinkstats2/thinkstats2.pdf)** (with Python) - Allen B. Downey.
 - Interactive book: **[Seeing Theory](https://seeing-theory.brown.edu)**.
 - [probabilitycourse.com](https://www.probabilitycourse.com/): an online book
+- **[Stat Trek](https://stattrek.com/)**: teach yourself statistics.
 
 ## Fundamental
 
@@ -360,7 +361,7 @@ $$
 </div>
 
 - Trò **[Quincunx](https://www.mathsisfun.com/data/quincunx-flash.html)** cho 1 ví dụ của cái normal dist này (các viên bi rơi ngẫu nhiên xuống 1 tam giác có nhiều chướng ngại)
-- **<mark>[68-95-99.7 rule](https://en.wikipedia.org/wiki/68%E2%80%9395%E2%80%9399.7_rule)</mark>** (**Empirical rule**)
+- **[68-95-99.7 rule](https://en.wikipedia.org/wiki/68%E2%80%9395%E2%80%9399.7_rule)** (**<mark>Empirical rule<mark>**)
   - 68% ($\mu-\sigma, \mu+\sigma$), 95% ($\mu-2\sigma, \mu+2\sigma$), 99.7% ($\mu-3\sigma, \mu+3\sigma$)
   - **[??]**{:.tred} Tại sao giữa $(0,\delta)$ thì là 34.1% nhưng giữa $(-\delta, \delta$) lại là 68%? $\Rightarrow$ Chỉ là xấp xỉ mà thôi (để có cái tên gọn gọn của [68-95-99.7 rule](https://en.wikipedia.org/wiki/68%E2%80%9395%E2%80%9399.7_rule))
 - **Standard normal distribution**: when $\mu=0, \sigma=1$ or <mark>$X\sim \mathcal{N}(0,1)$</mark>.
@@ -387,7 +388,7 @@ np.random.normal(loc=0, scale=1.0, size=None)
 
 - Plot/more examples on [numpy](https://docs.scipy.org/doc/numpy-1.13.0/reference/generated/numpy.random.normal.html).
 
-### Z-Scores (normal dist)
+### Z-Scores (standard score)
 
 - Liên quan đến **Normal distribution**!
 - Khi ta muốn biết mình đứng thứ mấy trong lớp sau khi có điểm bài kiểm tra?
@@ -515,7 +516,7 @@ $$
 
 - Định lý giới hạn trung tâm.
 - The Central Limit Theorem for **Any Probability Distribution**: If x possesses **any** distribution with mean $\mu$ and standard deviation $\sigma$, then the sample mean $\bar{x}$ based on a random sample of size $n$ will have a distribution that approaches the distribution of a normal random variable with mean $\mu$ and standard deviation $\sigma/\sqrt{n}$ as $n$  increases without limit.
-- The somewhat surprising strength of the theorem is that (under certain natural conditions) there is essentially no assumption on the probability distribution of the variables themselves; the **theorem remains true no matter what the individual probability distributions are**.
+- But sample sizes are sometimes small, and often we do not know the standard deviation of the population. When either of these problems occur, statisticians rely on the distribution of the t statistic (also known as the t score).
 
 **[??]**{:.tred} *Ví dụ của một X không có normal distribution nhưng converge về ND?*: [[1]](https://brilliant.org/wiki/central-limit-theorem/) *$\Leftarrow$ Thật ra dựa vào số lượng sample, ta có thể dự đoán mean và SD có thể convert về normal dist chứ thật ra một cái bất kỳ vẫn chưa tìm thấy ví dụ được!*{:.tred}
 
@@ -539,17 +540,16 @@ where,
 
 ### t-values (Student's t distributions, t-statistic, t-test)
 
-**[??]**{:.tred} *Tóm lại t-values có tác dụng gì?* Thu nhận những thông tin đáng tin cậy từ những sample khi **SD chưa biết**! 
-
+- ([ref](https://stattrek.com/probability-distributions/t-distribution.aspx) - hay) The **t distribution** (aka, **Student's t-distribution**) is a probability distribution that is used to <mark>estimate population parameters</mark> when the sample size is small and/or when the population variance is unknown.
 - *Student's t distribution* được khám phá bởi W.S. Gosset. Vốn dĩ nó có tên vậy là vì ngày đó cty ông đang làm cho không khuyến khích nhân viên của mình đăng báo riêng. Do đó ông đã lấy bút danh là *Student*. Ông đã dùng biến $t$ nên nó vẫn được giữ tên như vậy!
-- Statistical methods for obtaining <mark>**reliable information** from samples of populations</mark> with <mark>unknown SD $\sigma$</mark> (*không biến độc phân tán dữ liệu ra sao*!!!).
+- Statistical methods for obtaining <mark>reliable information from samples of populations</mark> with <mark>unknown SD $\sigma$</mark> (*không biến độc phân tán dữ liệu ra sao*!!!).
 
 <div class="thi-box" markdown="1">
 <div class="box-title" markdown="1">
 **Student's t distribution** [1]
 </div>
 <div class="box-content" markdown="1">
-Assume that $x$ has normal distribution with mean $\mu$. For sample size $n$, with the sample mean $\bar{x}$ and sample standard deviation $s$, the **t variable**,
+Assume that $x$ has normal distribution with mean $\mu$. For <mark>sample size $n$</mark>, with the sample mean $\bar{x}$ and sample standard deviation $s$, the **t variable**,
 
 $$
 t = \dfrac{\bar{x}-\mu}{\frac{s}{\sqrt{n}}}
@@ -559,14 +559,39 @@ has a **Student's t distribution** with **degrees of freedom** $n-1$.
 </div>
 </div>
 
-- The **shape** of the t distribution <mark>depends only on $n$</mark>, **provided** the basic variable $x$ has a **normal distribution**. 
+- There are actually **many different t distributions**. The particular form of the t distribution is determined by its degrees of freedom. The degrees of freedom refers to the number of independent observations in a set of data. (<mark># of independent observations = dof-1</mark>)
 
-![t distribution's properties]({{img-url}}/t-dist.jpg){:.w-750}
+  ![t distribution's properties]({{img-url}}/t-dist.jpg){:.w-750}
+
+- # of dof càng lớn thì t-distributions càng gần normal distribution.
+- The t distribution <mark>should not be used</mark> with small samples from populations that are not approximately normal.
+- The t statistic produced by this transformation <mark>can be associated with a unique cumulative probability</mark>. **[???]**{:.tred}
+
+<ul class="collapsible" data-collapsible="accordion">
+<li>
+<div class="collapsible-header" markdown="1"><i class="material-icons">face</i>
+Examples
+</div>
+<div class="collapsible-body" markdown="1">
+
+**Problem**: Acme Corporation manufactures light bulbs. The CEO claims that an average Acme light bulb lasts 300 days. A researcher randomly selects 15 bulbs for testing. The sampled bulbs last an average of 290 days, with a standard deviation of 50 days. If the CEO's claim were true, what is the probability that 15 randomly selected bulbs would have an average life of no more than 290 days?
+
+- Đầu tiên, tính t-statistics theo công thức ở trên: $t=- 0.7745966$
+- dof = 15-1 = 14
+- Sử dụng t-distribution calculator, nhưng ko biết nó tính thế nào????
+
+<mark>Có thế nó tính theo $1-t$.</mark>
+
+Xem thêm [tại đây](https://stattrek.com/probability-distributions/t-distribution.aspx).
+
+</div>
+</li>
+</ul>
 
 ### Confidence interval (CI) & uncertainly
 
 - **Refs**: [1, p.345], [[4](http://www.stat.yale.edu/Courses/1997-98/101/confint.htm)]
-- **What is?**
+- **What is it?**
 - Confidence interval **for mean $\mu$** when **SD $\sigma$ is unknown**: 
 
 
