--- a/_posts/french/2019-03-26-french-1.md
+++ b/_posts/french/2019-03-26-french-1.md
@@ -12,6 +12,13 @@ Only for French.
 
 - Pourquoi **mon livre** préféré **est-il** dans la poubelle ?
 
+
+## en + V + "-ant" (like V-ing)
+
+Two actions happen at the same time ([ref](https://www.duolingo.com/skill/fr/Nightmare/tips)):
+
+- Elle lit le journal **en buvant** du café.​
+
 ## lui / leur
 
 - V + to him/to her/to it = lui + V
@@ -105,11 +112,11 @@ Let’s go!
 Allons‑**y** !<br />
 Let’s go!
 
-### Tu t'y intéresses.​
+### Tu t'y intéresses​
 
 **Y** can replace any **noun** that comes after **à**, as long as **it’s not a person**. Be careful, you can <mark>only use y in this context</mark>. 
 
-<p class="p-mark">
+<p class="p-mark" markdown="1">
 S + V + **à** + **noun** (not a person) -> S + **y** + V.
 </p>
 
@@ -119,7 +126,7 @@ S + V + **à** + **noun** (not a person) -> S + **y** + V.
 
 ## J’en ai besoin
 
-<p class="p-mark">
+<p class="p-mark" markdown="1">
 S + V + **de** + **noun** -> S + **en** + V.
 </p>
 
@@ -176,7 +183,7 @@ You will also use **être** with verbs that start with **se**, like *se réveill
 - Nous **nous sommes habillés** = We got dressed.
 - Ils **ne** se sont pas perdus.
 
-<p class="p-mark">
+<p class="p-mark" markdown="1">
 S + (ne) + se + être + (pas) + V​​​
 </p>
 
