--- a/_posts/it/2018-09-03-git-note.md
+++ b/_posts/it/2018-09-03-git-note.md
@@ -35,14 +35,34 @@ git config credential.helper store
 7. Discard the change: `git checkout .`
 
 8. Temporarily check a commit: `git checkout <commitID>`, if the work's done, just check out back to the current working branch.
+9. Tạo nhánh mới:
+
+  ~~~ bash
+  git checkout -b <ten-nhanh> # tạo và chuyển tới nhánh mới
+  git branch <ten-nhanh> # tạo nhánh mới
+  ~~~
+
+10. Xóa nhánh: 
+
+  ~~~ bash
+  git branch -d <ten-nhanh> # xóa nhánh local
+  git push origin :<tên-nhánh> # xóa nhánh remote
+  ~~~
+
+11. Liệt kê danh sách các nhánh
+
+  ~~~ bash
+  git branch # local
+  git branch -a # local & global
+  ~~~
 
 9. Merge sub branch to master and replace master branch
 
 	~~~ bash
-git checkout <nhanh>
-git merge -s ours master
-git checkout master
-git merge <nhanh>
+  git checkout <nhanh>
+  git merge -s ours master
+  git checkout master
+  git merge <nhanh>
 	~~~
 
 10. Working with branches
@@ -55,21 +75,21 @@ git merge <nhanh>
 11. **Error**: `Could not resolve host: github.com`
 
 	~~~ bash
-git config --global --unset http.proxy 
-git config --global --unset https.proxy
+  git config --global --unset http.proxy 
+  git config --global --unset https.proxy
 	~~~
 
 12. Copy/update a folder from another branch to current branch. Suppose that we wanna copy folder **abc** from branch **test5** to current brach **other-machine**
 
 	~~~ bash
-git checkout other-machine # go to current branch
-git checkout test5 path/to/abc
-git status # to see the change
+  git checkout other-machine # go to current branch
+  git checkout test5 path/to/abc
+  git status # to see the change
 	~~~
 
 13. Pull from remote and replace everything from remote to local
 
 	~~~ bash
-git fetch origin
-git reset --hard origin/master
+  git fetch origin
+  git reset --hard origin/master
 	~~~
