--- a/_posts/french/2019-03-26-french-1.md
+++ b/_posts/french/2019-03-26-french-1.md
@@ -204,6 +204,11 @@ C’est un **bon** livre.<br />
 Je porte **de** nouvelles chaussures.<br />
 Tu as de vieux meubles.
 
+## autant...que
+
+- Il a **autant de** livres **que** moi. = He has **as many** books **as** me.
+- Ne mange pas **autant**! = Don't eat **so much**!​​
+
 ## mots
 
 - partir **à** = going somewhere / partir **de** = going from somewhere.
