--- a/_posts/others/2018-10-22-list-apps.md
+++ b/_posts/others/2018-10-22-list-apps.md
@@ -19,7 +19,16 @@ My collection of good apps.
 ## Windows
 
 1. [ScreenToGif](https://www.screentogif.com/) : quay phim màn hình rùi xuất ra file gif.
-2. Lightweight pdf reader (để xem nhanh 1 file pdf): nên mở bằng Chrome!
+2. Lightweight pdf reader (để xem nhanh 1 file pdf): nên mở bằng Chrome! hoặc [Sumatra PDF](https://www.sumatrapdfreader.org/free-pdf-reader.html)
+3. [Big Stretch Reminder](https://monkeymatt.com/bigstretch/): nhắc nhở thư giãn khi làm việc lâu với máy tính.
+
+## Linux
+
+- [Workrave](http://www.workrave.org/) : nhắc nghỉ ngơi khi làm việc lâu với máy tính
+
+## MacOS
+
+- [Time Out](https://apps.apple.com/us/app/time-out-free/id402592703?mt=12): nhắc nghỉ ngơi khi làm việc lâu với máy tính
 
 ## Chrome extension
 
