--- a/_posts/others/2018-10-22-list-film.md
+++ b/_posts/others/2018-10-22-list-film.md
@@ -24,13 +24,13 @@ My collection of good films.
 - **Happy Death Day**: có 2 phần nhưng phân 2 khá tệ, vòng lặp thời gian.
 - **The Lake House** (2006): Hai người yêu nhau, viết thư cho nhau nhưng cách nhau tận 2 năm trời. Liệu họ có thể đến được với nhau?
 - **The Prestige** (2006): hai nhà ảo thuật cạnh tranh nhau và có twist. Một bộ phim của Christopher Nolan.
-
+- **Parasite** (2019): Bộ phim xoay quanh hai gia đình hoàn toàn trái ngược: một bên vô cùng giàu có, còn một bên luôn sống trong cảnh nghèo túng. Họ tình cờ gặp gỡ và quen biết nhau sau một biến cố không ngờ...
 
 ## Series
 
-- **Daredevil**: superhero + from normal human
+- **Daredevil**: superhero + from normal human. Phim mang lại cảm giác chân thật của một siêu anh hùng rất đời thường. Tình tiết rất "người lớn" chứ không phải mấy phim kiểu con nít như Arrow.
 - **Breaking Bad**: quá kinh điển, phim bộ hay nhất mọi thời đại. Chuyển biến tâm lý nhân vật quá đỉnh.
-- **Heroes**: phiên bản truyền hình của X-men.
+- **Heroes**: phiên bản truyền hình của X-men. Cái hay là một đống hổ lốn các siêu năng lực được kết hợp hài hòa trong cốt truyện đầy logic và lôi cuốn.
 - **Chernobyl**: phim rất chân thực về thảm họa hạt nhân.
 - **Genius**: phim về Albert Einstein.
 - **Game of Thrones**: phần cuối hơi củ chuối.
@@ -38,3 +38,4 @@ My collection of good films.
 - **IRIS**: phim Hàn, mật danh có Kim Tae Hee và Lee Byung-hun.
 - **Extra French**: (có nhiều phiên bản tiếng khác), thích hợp xem để học tiếng.
 - **Alice et Antoine**: loạt phim ngắn vài phút, thích hợp để xem học tiếng Pháp.
+- **La Casa de Papel** (2017): tên tiếng Việt là *Phi vụ triệu đô*. Một nhóm tội phạm lên kế hoạch đánh cướp nhà máy in tiền quốc gia của TBN dưới sự dẫn dắt của một "professor" bao ngầu, bao thông minh. Nhiệm vụ của cả đám là làm sao không đổ một giọt máu nào, như Robinhood thời hiện đại. Tuy nhiên, mọi chuyện không đơn giản đến thế!
