--- a/_posts/french/2019-03-26-french-1.md
+++ b/_posts/french/2019-03-26-french-1.md
@@ -264,6 +264,7 @@ Tu as de vieux meubles.
 - avoir honte de qqn = be ashamed of so
 - **depuis** = since/for + điểm thời gian / khoảng thời gian đều được
 - **Il arrive à** travailler dans ce petit bureau ? = **He is able to** work...?
+- arriver à + V = réussir + V
 - On en a envie. = Nous en avons envie. = We want to.
 - They're **getting used to** their new factory. = Ils s'**habituent à** leur nouvelle usine.
 - **à la carte** menu = thực đơn gọi từng món
@@ -284,3 +285,19 @@ Tu as de vieux meubles.
   - = par conséquent
 - être à cheval sur qqc = nghiêm túc, khó tính về cái gì đó
 - hypocrite = đạo đức giả / kẻ đạo đức giả
+- La maison est **sens dessus dessous** = The house is upside-down (mớ hỗn độn)
+- **à toute vitesse** = fast
+  - réfléchir à toute vitesse = nghĩ nhanh
+- prendre son courage à deux mains = lấy can đảm = vaincre sa peur
+- se mettre à + V = commencer à faire qqc
+  - Thường dùng trong quá khứ: **se + être + mise à** + V
+- J'ai pas envie = I don't want!
+  - J'ai pas envie d'aller au travai ajd.
+- ne que = seulement!
+  - Il **n**'y a **que** des touristes dans ce resto = il y a **seulement** des touristes dans ce resto.
+- n'avoir qu'à = il suffit de -> thường dùng để khuyên!
+  - T**'as qu'à** arrêter de manger au McDonald! = đừng nên ăn 
+- Le problème est **réglé**. = được giải quyết!
+- On peut régler? = L'addition svp! = Tính tiền đi chủ quán ơi!
+- Fais comme chez toi! / Faites comme chez vous = cứ tự nhiên như ở nhà đi
+- Comment ca se fait? = Sao nó ra thế này? (tình huống)
