--- a/_posts/french/2019-03-26-french-1.md
+++ b/_posts/french/2019-03-26-french-1.md
@@ -124,7 +124,7 @@ S + V + **à** + **noun** (not a person) -> S + **y** + V.
 - Vous réfléchissez **à ma suggestion**.​ -> Vous **y** réfléchissez.
 - Ils pensent **aux examens**.​ -> Ils **y** pensent.​​​
 
-## J’en ai besoin
+## J'en ai besoin
 
 <p class="p-mark" markdown="1">
 S + V + **de** + **noun** -> S + **en** + V.
@@ -135,7 +135,7 @@ S + V + **de** + **noun** -> S + **en** + V.
 - **Il n’y en a plus** = there isn’t (aren’t) any left.
   - Je voudrais des œufs, mais il n’y en a plus.
 
-## Ça te dit d’aller au resto ?
+## Ça te dit d'aller au resto ?
 
 To **invite someone** you know well to do something, use **Ça te dit de…** ? When speaking to more than one person, use **Ça vous dit de…** ?
 
@@ -198,16 +198,27 @@ Au lieu d’un chien, tu **devrais** acheter un chat.
 
 ## de + (pluriel) adj + N
 
-When using these adjectives in the **plural**, we use **de** before them, instead of **des**.
-
-C’est un **bon** livre.<br />
-Je porte **de** nouvelles chaussures.<br />
-Tu as de vieux meubles.
+- **une** aventure ---> **des** aventures
+- **une** aventure merveilleuse ---> **des** aventures merveilleuses
+- **une** vraie aventure ---> **de vraies** aventures (tính từ giữa de và N)
 
 ## autant...que
 
 - Il a **autant de** livres **que** moi. = He has **as many** books **as** me.
-- Ne mange pas **autant**! = Don't eat **so much**!​​
+- Ne mange pas **autant**! = Don't eat **so much**!
+
+## Verbs
+
+- **-eindre**
+  - ​​(peindre) je peins / tu peins / il peint / nous peignons / vous peignez / ils,elles peignent
+  - éteindre (turn off)
+- **compléter** --> tu compl**è**tes
+- **acheter** --> j'ach**è**te
+
+## Formal / Informal
+
+- (Informal): C'est difficile de faire qqc.
+- (Formal): Il est difficile de faire qqc.
 
 ## mots
 
@@ -301,3 +312,15 @@ Tu as de vieux meubles.
 - On peut régler? = L'addition svp! = Tính tiền đi chủ quán ơi!
 - Fais comme chez toi! / Faites comme chez vous = cứ tự nhiên như ở nhà đi
 - Comment ca se fait? = Sao nó ra thế này? (tình huống)
+- Fiche-moi la paix! = Leave me alone!
+- You're boring! = T'es chiant! = T'es ennuyeux/ennuyeuse!
+  - You're bored? = Tu t'ennuies?
+- Je me tire! = I'm out of here!
+- Get out! = Dehors!
+  - Get out of here! = Fichez le camp d'ici!
+- à la con! = bullshit! = stupid!
+- Ta gueule! = Shut the fuck up!
+- J**'ai failli** tomber = I **almost** fell. = suýt, toan
+- éteindre/allumer la lumière = tắt/bật đèn
+- pour toujours = forever
+- **Au secours** = Help!
