--- a/_posts/others/2018-10-22-list-film.md
+++ b/_posts/others/2018-10-22-list-film.md
@@ -25,6 +25,7 @@ My collection of good films.
 - **The Lake House** (2006): Hai người yêu nhau, viết thư cho nhau nhưng cách nhau tận 2 năm trời. Liệu họ có thể đến được với nhau?
 - **The Prestige** (2006): hai nhà ảo thuật cạnh tranh nhau và có twist. Một bộ phim của Christopher Nolan.
 - **Parasite** (2019): Bộ phim xoay quanh hai gia đình hoàn toàn trái ngược: một bên vô cùng giàu có, còn một bên luôn sống trong cảnh nghèo túng. Họ tình cờ gặp gỡ và quen biết nhau sau một biến cố không ngờ...
+-  **The Time Traveler's Wife** (2009): 1 anh chàng bị mắc chứng du hành thời gian không thể kiểm soát, anh quen 1 cô bé nhỏ, yêu và sau này cưới cô làm vợ. Một cốt truyện nhẹ nhành so với những bộ phim khác cùng đề tài. Cho cảm giác giống như xem phim *The Lake House*.
 
 ## Series
 
