ud french + fix st

--- a/_posts/french/2019-03-26-french-1.md
+++ b/_posts/french/2019-03-26-french-1.md
@@ -324,3 +324,7 @@ Au lieu d’un chien, tu **devrais** acheter un chat.
 - éteindre/allumer la lumière = tắt/bật đèn
 - pour toujours = forever
 - **Au secours** = Help!
+- Elle s'est **brûlé** la main.
+  - BUT: Elle s’est **brûlée**
+  - Ils se sont **coupé** les cheveux.
+    - BUT: Ils se sont **coupés**.
