edit readme + ud french + codecademy js

--- a/_posts/french/2019-03-26-french-1.md
+++ b/_posts/french/2019-03-26-french-1.md
@@ -328,3 +328,13 @@ Au lieu d’un chien, tu **devrais** acheter un chat.
   - BUT: Elle s’est **brûlée**
   - Ils se sont **coupé** les cheveux.
     - BUT: Ils se sont **coupés**.
+- Want to say someone is welcome in your house:
+  - Vous êtes toujours les bienvenus ici. = You are always welcome here.
+  - Elle est la bienvenue chez nous. = She is welcome in our home.
+- **vieux** + N (not start with vowels)
+  - **vieil** + N (start with vowels)
+  - **bel** + N (start with vowels)
+  - **beau** + N (not start with vowels)
+- visit a person = **rendre visit à + qqc**
+  - visit a place = **visit + qqp**
+- **avoir entendu parler de + qqc** = đã từng nghe nói về cái gì đó​​​
