--- a/_posts/stats/2019-08-08-stats-1.md
+++ b/_posts/stats/2019-08-08-stats-1.md
@@ -361,7 +361,7 @@ $$
 </div>
 
 - Trò **[Quincunx](https://www.mathsisfun.com/data/quincunx-flash.html)** cho 1 ví dụ của cái normal dist này (các viên bi rơi ngẫu nhiên xuống 1 tam giác có nhiều chướng ngại)
-- **[68-95-99.7 rule](https://en.wikipedia.org/wiki/68%E2%80%9395%E2%80%9399.7_rule)** (**<mark>Empirical rule<mark>**)
+- **[68-95-99.7 rule](https://en.wikipedia.org/wiki/68%E2%80%9395%E2%80%9399.7_rule)** (**<mark markdown="span">Empirical rule<mark>**)
   - 68% ($\mu-\sigma, \mu+\sigma$), 95% ($\mu-2\sigma, \mu+2\sigma$), 99.7% ($\mu-3\sigma, \mu+3\sigma$)
   - **[??]**{:.tred} Tại sao giữa $(0,\delta)$ thì là 34.1% nhưng giữa $(-\delta, \delta$) lại là 68%? $\Rightarrow$ Chỉ là xấp xỉ mà thôi (để có cái tên gọn gọn của [68-95-99.7 rule](https://en.wikipedia.org/wiki/68%E2%80%9395%E2%80%9399.7_rule))
 - **Standard normal distribution**: when $\mu=0, \sigma=1$ or <mark>$X\sim \mathcal{N}(0,1)$</mark>.
@@ -404,7 +404,7 @@ np.random.normal(loc=0, scale=1.0, size=None)
 - z-score is dimensionless measure.
 - z-score (>0) càng lớn thì x càng nằm trong top cao so với trung bình.
 - z-score (<0) càng bé thì x càng nằm trong top thấp so với trung bình.
-- EX: sau khi tính điểm trung bình của 2 đợt thi, lần 1 $z\_x=0.875$, lần 2 $z\_x=1.25$ thì ta sẽ biết được (nếu so với các bạn cùng lớp), lần 2 chúng ta làm bài tốt hơn nhiều!
+- EX: sau khi tính điểm trung bình của 2 đợt thi, lần 1 $z\_x=0.375$, lần 2 $z\_x=0.825$ thì ta sẽ biết được (nếu so với các bạn cùng lớp), lần 2 chúng ta làm bài tốt hơn nhiều!
 
 
 
@@ -563,7 +563,7 @@ has a **Student's t distribution** with **degrees of freedom** $n-1$.
 
   ![t distribution's properties]({{img-url}}/t-dist.jpg){:.w-750}
 
-- # of dof càng lớn thì t-distributions càng gần normal distribution.
+- \# of dof càng lớn thì t-distributions càng gần normal distribution.
 - The t distribution <mark>should not be used</mark> with small samples from populations that are not approximately normal.
 - The t statistic produced by this transformation <mark>can be associated with a unique cumulative probability</mark>. **[???]**{:.tred}
 
